--- a/src/NerdStore.WebApp.MVC/NerdStore.WebApp.MVC/NerdStore.WebApp.MVC.csproj
+++ b/src/NerdStore.WebApp.MVC/NerdStore.WebApp.MVC/NerdStore.WebApp.MVC.csproj
@@ -22,6 +22,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\NerdStore.Catalogo.Application\NerdStore.Catalogo.Application.csproj" />
+    <ProjectReference Include="..\..\NerdStore.Pagamentos.AntiCorruption\NerdStore.Pagamentos.AntiCorruption.csproj" />
+    <ProjectReference Include="..\..\NerdStore.Pagamentos.Data\NerdStore.Pagamentos.Data.csproj" />
     <ProjectReference Include="..\..\NerdStore.Vendas.Application\NerdStore.Vendas.Application.csproj" />
     <ProjectReference Include="..\..\NerdStore.Vendas.Data\NerdStore.Vendas.Data.csproj" />
   </ItemGroup>
